# prim-int

./: .gitignore  .hlint.yaml  CHANGELOG.md  README.md  cabal.project  default.nix  flake.nix  hie.yaml  prim-int.cabal  release.nix  shell.nix  unlifted-int.cabal
.zsh/: .zsh_history
nix/: pkgs.nix
nix/extensions/: prim-int.nix
nix/exts/: prim-int.nix
nix/haskell-packages/: prim-bool.nix  prim-compat.nix
nix/overlays/: haskell.nix
nix/pkgs/: prim-bool.nix  prim-compat.nix  unlifted-bool.nix
src/Data/Int/: Prim.hs  Unlifted.hs
src/Data/Int/Prim/: Orphans.hs
test/: Test.hs
test/Test/: Compat.hs  Int.hs  Int16.hs  Int32.hs  Int8.hs
