cabal-version: 2.4

name:        prim-int
category:    Data
version:     1.0.0
synopsis:    Facilities for working with unlifted integers.
description: Facilities for working with unlifted integers.

author:       jake
maintainer:   jacobleach@protonmail.com
copyright:    2022, Jacob Leach
homepage:     https://github.com/riz0id/prim-int
license:      ISC
license-file: LICENSE
build-type:   Simple

extra-source-files:
  CHANGELOG.md
  README.md

tested-with:
  GHC == 9.2.2
  GHC == 9.0.2

flag llvm
  Description: Compile using the LLVM backend.
  Default:     False
  Manual:      True

common common
  default-language: Haskell2010

  ghc-options:
    -- Warnings & Sanity checking
    -Wall
    -Wcompat
    -Wcpp-undef
    -Werror
    -Widentities
    -Wmissing-export-lists

    -- Optimization
    -O2
    -fregs-iterative
    -fmax-simplifier-iterations=20

  build-depends:
    , base        >= 4.15.1 && < 4.17
    , prim-bool   >= 1.0.1  && < 1.1.0
    , prim-compat >= 1.0.0 && < 1.1.0
    , ghc-prim    >= 0.7.0  && < 0.9

library
  import:         common
  hs-source-dirs: src

  default-extensions: 
    CPP MagicHash

  if flag(llvm) 
    ghc-options: -fllvm 

  build-depends:
    , template-haskell >= 2.17.0 && < 2.19

  exposed-modules:
    Data.Int.Prim

  other-modules:
    Data.Int.Prim.Orphans

test-suite test
  import:         common
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Test.hs

  ghc-options:
    -threaded
    -rtsopts
    "-with-rtsopts=-N"

  build-depends:
    , hedgehog
    , prim-compat
    , prim-int
    , tasty
    , tasty-hedgehog 

  other-modules:
    Test.Compat
    Test.Int
    Test.Int8
    Test.Int16
    
  if (impl(ghc >= 9.2.2))
    other-modules:
      Test.Int32

source-repository head
  type:     git
  location: https://github.com/riz0id/prim-int
