cabal-version: 2.4

name:        prim-int
category:    Data
version:     1.0.0
synopsis:    Facilities for working with unlifted integers.
description: Facilities for working with unlifted integers.

author:       jacob leach
maintainer:   jacobleach@protonmail.com
copyright:    2022, Jacob Leach
homepage:     https://github.com/riz0id/prim-int
license:      ISC
license-file: LICENSE
build-type:   Simple

extra-source-files:
  CHANGELOG.md
  README.md

tested-with:
  GHC == 9.10.1
  GHC == 9.8.1
  GHC == 9.4.2
  GHC == 9.2.2
  GHC == 9.0.2

flag llvm
  Description: Compile using the LLVM backend.
  Default:     False
  Manual:      True

common common
  default-language: Haskell2010

  ghc-options:
    -- `-j4` is set (as opposed to `-j`) due to the small number of modules that
    -- are exported by this package.
    -j4

    -- `-O` is explicitly set since none of the functions exported by this
    -- library would benefit from higher optimization levels. This helps reduce
    -- compile times.
    -O

    -- `-fmax-simplifier-iterations` is set to keep compile times in check.
    -- The functions in this library are simple and do not need very many
    -- simplifier passes.
    -fmax-simplifier-iterations=4

  build-depends:
    , base        >= 4.15.1 && < 4.22
    , prim-bool   >= 1.0.0  && < 1.1.0
    , prim-compat >= 1.0.0  && < 1.1.0
    , ghc-prim    >= 0.7.0  && < 0.14

library
  import:         common
  hs-source-dirs: src

  if flag(llvm)
    ghc-options: -fllvm

  build-depends:
    , template-haskell >= 2.17.0 && < 2.24

  exposed-modules:
    Data.Int.Prim

  other-modules:
    Data.Int.Prim.Orphans

test-suite prim-int-test
  import:         common
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Test.hs

  ghc-options:
    -threaded
    -rtsopts
    "-with-rtsopts=-N"

  build-depends:
    , hedgehog
    , prim-int
    , tasty
    , tasty-hedgehog

  other-modules:
    Test.Compat
    Test.Int
    Test.Int8
    Test.Int16

  if (impl(ghc >= 9.2.2))
    other-modules:
      Test.Int32

source-repository head
  type:     git
  location: https://github.com/riz0id/prim-int
